# herdr-insight

./: Cargo.toml  DESIGN.md  Makefile  README.md  README_zh-CN.md  herdr-plugin.toml
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: cli.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  ports.rs
crates/domain/tests/: poller_tests.rs
crates/infra/: Cargo.toml
crates/infra/src/: herdr_client.rs  lib.rs  persistence.rs
crates/infra/tests/: data_tests.rs
crates/tui/: Cargo.toml
crates/tui/src/: config.rs  lib.rs
crates/tui/src/timeline/: mod.rs  render.rs  state.rs
docs/: AUDIT_LOG.md  AUDIT_REPORT.md
docs/superpowers/plans/: 2026-06-22-herdr-insight.md
scripts/: open-timeline.sh
